# auto-video-research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  _fix_indent.py  _fix_router.py  _fix_tests.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_projects.py  002_add_must_change_password.py  002_add_status_history.py  002_add_user_must_change_password.py  003_add_status_history.py  003_add_user_must_change_password.py  004_add_api_keys.py  005_add_llm_usage_partitioned.py  006_add_pipeline_runs.py  006_add_research_sources.py  006_add_scene_approvals.py  007_add_step_versions_fk.py  008_add_pipeline_runs.py  009_add_prompts.py  010_add_sources.py  011_add_claims.py  012_add_assets.py  012_add_pipeline_run_cancel_requested_at.py  012_add_project_entry_point.py  012_add_step_approvals.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  base.py  registry.py
backend/app/api/: assets.py  auth.py  claims.py  deps.py  events.py  health.py  projects.py  runs.py  scenes.py  sources.py  users.py  versions.py
backend/app/config/: pricing.yaml
backend/app/core/: asset_allowlist.py  cap_guard.py  config.py  cost_exceptions.py  crypto.py  database.py  deps.py  exceptions.py  rate_limit.py  router.py  router.py.bak  security.py  seed.py
backend/app/events/: __init__.py  bus.py  cost.py  project_status.py  schemas.py
backend/app/layout_engine/: __init__.py  analysis.py  classifier.py  (+3 more)
backend/scripts/: prompt_eval_cli.py
backend/tests/: conftest.py
(+611 files in other folders)
