[project]
name = "avr-backend"
version = "0.1.0"
description = "AVR FastAPI backend"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.15.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[tool.uv]
package = false
